--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0F5455</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#313131</color>
+    <color name="colorPrimaryDark">#202020</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackground">#363636</color>
     <color name="colorText">#f0f0f0</color>
